--- a/collection/Move.toml
+++ b/collection/Move.toml
@@ -7,4 +7,6 @@ Sui = { git = "https://github.com/MystenLabs/sui.git", subdir = "crates/sui-fram
 
 [addresses]
 collection =  "0x0"
+utils = "0x0"
+operations = "0x0"
 sui =  "0000000000000000000000000000000000000002"
