--- a/nftcollection/Move.toml
+++ b/nftcollection/Move.toml
@@ -1,11 +1,10 @@
 [package]
-name = "collection"
+name = "NftCollection"
 version = "0.0.1"
 
 [dependencies]
 Sui = { git = "https://github.com/MystenLabs/sui.git", subdir = "crates/sui-framework", rev = "devnet" }
 
 [addresses]
-collection =  "0x0"
-utils = "0x0"
+nftcollection = "0x0"
 sui =  "0000000000000000000000000000000000000002"
